--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,2 +1,2 @@
 ﻿config:
-  info: "master branch,spring-config/config-dev.yml version=1"
+  info: "dev branch,spring-config/config-dev.yml version=1"
