--- a/config-prod.yml
+++ b/config-prod.yml
@@ -1,2 +1,2 @@
 ﻿config:
-  info: "master branch,spring-config/config-prod.yml version=1"
+  info: "dev branch,spring-config/config-prod.yml version=1"
